# army-of-ralph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
packaging/: ralph.rb
ralph/: __init__.py  campaign.py  cli.py  core.py  ui.py  watch.py
ralph/skills/: prd-SKILL.md
ralph/templates/: PRD-template.md  example-agent.md  example-progress.txt
skills/: prd-SKILL.md
